RESOLVED FIXED285486
Non-unified source build fix of January 2025
https://bugs.webkit.org/show_bug.cgi?id=285486
Summary Non-unified source build fix of January 2025
Fujii Hironori
Reported 2025-01-06 17:47:47 PST
Non-unified source build fix of January 2025
Attachments
Fujii Hironori
Comment 1 2025-01-06 18:51:58 PST
EWS
Comment 2 2025-01-06 19:52:33 PST
Committed 288501@main (9584f192adf8): <https://commits.webkit.org/288501@main> Reviewed commits have been landed. Closing PR #38617 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-01-06 19:53:15 PST
Fujii Hironori
Comment 4 2025-01-13 14:34:35 PST
EWS
Comment 5 2025-01-13 16:23:45 PST
Committed 288823@main (afbbae2c1f1b): <https://commits.webkit.org/288823@main> Reviewed commits have been landed. Closing PR #38958 and removing active labels.
Fujii Hironori
Comment 6 2025-01-15 19:55:32 PST
EWS
Comment 7 2025-01-15 21:24:21 PST
Committed 288992@main (f7719328a993): <https://commits.webkit.org/288992@main> Reviewed commits have been landed. Closing PR #39116 and removing active labels.
Fujii Hironori
Comment 8 2025-01-19 14:28:22 PST
EWS
Comment 9 2025-01-19 15:52:41 PST
Committed 289141@main (c44cfb032cd9): <https://commits.webkit.org/289141@main> Reviewed commits have been landed. Closing PR #39276 and removing active labels.
Fujii Hironori
Comment 10 2025-01-21 15:34:54 PST
Fujii Hironori
Comment 11 2025-01-21 16:00:49 PST
C:\webkit\wa\Source\WebKit\Shared\Extensions\WebExtensionSQLiteDatabase.cpp(37,23): error: unused variable 'WebExtensionSQLiteErrorDomain' [-Werror,-Wunused-const-variable] 37 | static constexpr auto WebExtensionSQLiteErrorDomain = "com.apple.WebKit.SQLite"_s; | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~ C:\webkit\wa\Source\WebKit\Shared\Extensions\WebExtensionSQLiteDatabase.cpp(38,23): error: unused variable 'WebExtensionSQLiteInMemoryDatabaseName' [-Werror,-Wunused-const-variable] 38 | static constexpr auto WebExtensionSQLiteInMemoryDatabaseName = "file::memory:"_s; | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ C:\webkit\wa\Source\WebKit\Shared\Extensions\WebExtensionSQLiteDatabase.cpp(39,23): error: unused variable 'WebExtensionSQLiteErrorMessageKey' [-Werror,-Wunused-const-variable] 39 | static constexpr auto WebExtensionSQLiteErrorMessageKey = "Message"_s; | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ C:\webkit\wa\Source\WebKit\Shared\Extensions\WebExtensionSQLiteDatabase.cpp(40,23): error: unused variable 'WebExtensionSQLiteErrorSQLKey' [-Werror,-Wunused-const-variable] 40 | static constexpr auto WebExtensionSQLiteErrorSQLKey = "SQL"_s; | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 4 errors generated.
EWS
Comment 12 2025-01-21 16:47:48 PST
Committed 289213@main (d1e4660bfe86): <https://commits.webkit.org/289213@main> Reviewed commits have been landed. Closing PR #39351 and removing active labels.
Fujii Hironori
Comment 13 2025-01-23 20:51:55 PST
EWS
Comment 14 2025-01-23 23:10:07 PST
Committed 289332@main (163c0fe2d9ad): <https://commits.webkit.org/289332@main> Reviewed commits have been landed. Closing PR #39485 and removing active labels.
Fujii Hironori
Comment 15 2025-01-26 23:25:53 PST
EWS
Comment 16 2025-01-27 05:37:28 PST
Committed 289424@main (3cec81e72c33): <https://commits.webkit.org/289424@main> Reviewed commits have been landed. Closing PR #39582 and removing active labels.
Fujii Hironori
Comment 17 2025-01-29 19:43:11 PST
EWS
Comment 18 2025-01-29 20:43:46 PST
Committed 289540@main (670d3170fe24): <https://commits.webkit.org/289540@main> Reviewed commits have been landed. Closing PR #39743 and removing active labels.
Fujii Hironori
Comment 19 2025-01-30 16:48:25 PST
EWS
Comment 20 2025-02-02 18:12:23 PST
Committed 289710@main (dd2f217014c9): <https://commits.webkit.org/289710@main> Reviewed commits have been landed. Closing PR #39792 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.