Non-unified source build fix of January 2025 (part 1) https://bugs.webkit.org/show_bug.cgi?id=285486

Unreviewed non-unified build fix.

* Source/JavaScriptCore/runtime/ImportMap.h:
* Source/WebCore/Modules/push-api/PushMessageCrypto.cpp:
* Source/WebCore/Modules/webtransport/WebTransportBidirectionalStreamConstructionParameters.h:
* Source/WebCore/bindings/js/ScriptModuleLoader.cpp:
* Source/WebCore/css/DOMCSSPaintWorklet.cpp:
* Source/WebCore/css/parser/CSSPropertyParserConsumer+Animations.cpp:
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingConstraints.h:
* Source/WebCore/platform/graphics/filters/software/FEColorMatrixSoftwareApplier.h:
* Source/WebCore/rendering/LegacyRootInlineBox.cpp:
* Source/WebCore/rendering/TextDecorationPainter.cpp:
(WebCore::convertShadowOffset): Deleted.
* Source/WebCore/svg/SVGResourceElementClient.h:
* Source/WebCore/svg/SVGTZoneImpls.cpp:
* Source/WebKit/WebProcess/Network/WebTransportSendStreamSink.cpp:
(WebKit::WebTransportSendStreamSink::write):
* Source/WebKit/WebProcess/WebPage/WebHistoryItemClient.cpp:

Canonical link: https://commits.webkit.org/288501@main