Source/WebCore/Modules/push-api/PushMessageCrypto.cpp
@@ -31,6 +31,7 @@
 #include <wtf/ByteOrder.h>
 #include <wtf/CryptographicallyRandomNumber.h>
 #include <wtf/StdLibExtras.h>
+#include <wtf/text/ASCIILiteral.h>
 
 namespace WebCore::PushCrypto {
 
