Source/WebCore/Modules/webtransport/WebTransportBidirectionalStreamConstructionParameters.h
@@ -26,6 +26,7 @@
 #pragma once
 
 #include <wtf/Forward.h>
+#include <wtf/ObjectIdentifier.h>
 #include <wtf/Ref.h>
 
 namespace WebCore {
