Source/WebCore/bindings/js/ScriptModuleLoader.cpp
@@ -38,6 +38,7 @@
 #include "MIMETypeRegistry.h"
 #include "ModuleFetchFailureKind.h"
 #include "ModuleFetchParameters.h"
+#include "ScriptController.h"
 #include "ScriptSourceCode.h"
 #include "ServiceWorkerGlobalScope.h"
 #include "ShadowRealmGlobalScope.h"
